--- a/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Temario/Tema 3/Presentación/Sincronización P2P mediante eventos y mediante barreras.tex
+++ b/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Temario/Tema 3/Presentación/Sincronización P2P mediante eventos y mediante barreras.tex
@@ -163,7 +163,7 @@ Ejemplo de dos procesos sincronizados mediante un evento donde inicialmente la v
 			//Código sincronizado}
 		\end{block}
 	\end{columns}
-\textcolor{white}{a\\}
+\vspace{0.5cm}
 En este ejemplo podemos ver cómo el procesador 1 se queda a la espera de que el procesador 2 le pase el turno (estableciendo a 1 la variable \texttt{turno}).
 
 Con esto se sincronizan para realizar la sección de \texttt{Código sincronizado} o, simplemente, porque sea necesaria una sincronización en ese punto del programa.
@@ -204,7 +204,7 @@ Ejemplo de código Java para la gestión de una barrera y varios procesos:
 	\column{0.45\textwidth}
 	En el ejemplo anterior se ve cómo, hasta que no llegan todos los procesos a la barrera, el programa no seguirá ejecutándose. Y, cuando lo haga, lo harán todos los procesos a la vez.
 	
-	\textcolor{white}{a\\}
+	\vspace{0.5cm}
 	A la derecha tenemos una figura donde se lanzan tres procesos a la vez y son sincronizados de por medio.
 	\column{0.45\textwidth}
 	\begin{figure}[h]
@@ -212,10 +212,6 @@ Ejemplo de código Java para la gestión de una barrera y varios procesos:
 		\includegraphics[scale=0.23]{Barreras.png}
 	\end{figure}
 \end{columns}
-
-
-	
-	
 \end{frame}
 
 \end{document}
