Arreglado el currículum

--- a/4 GII/Curriculum/Jesús Rodríguez Heras.tex
+++ b/4 GII/Curriculum/Jesús Rodríguez Heras.tex
@@ -92,6 +92,18 @@
 %%% ------------------------------------------------------------
 \NewPart{Educación}{}
 
+\EducationEntry{Educación Primaria}{2003-2009}{CEIP Ciudad de Jerez}
+
+\sepspace
+
+\EducationEntry{Educación Secundaria}{2009-2013}{IES Fernando Savater}
+
+\sepspace
+
+\EducationEntry{Bachillerato}{2013-2015}{IES Fernando Savater}
+
+\sepspace
+
 \EducationEntry{Ingeniería Informática}{2015-2019}{Escuela Superior de Ingeniería, Universidad de Cádiz}{
 Mención en Ingeniería de Computadores.
 %\begin{itemize}
@@ -103,11 +115,17 @@ Mención en Ingeniería de Computadores.
 
 \sepspace
 
-\EducationEntry{CCNA Routing and Switching}{2016-2017}{Online}{Curso de introducción a las redes de computadores, 70 horas, Habilidad para montar y gestionar redes de computadores de medio-alto calibre.\\}
+\EducationEntry{CCNA Routing and Switching}{2016-2017}{Online}{Curso de introducción a las redes de computadores, 70 horas, Habilidad para montar y gestionar redes de computadores de medio-alto calibre.}
 
-\EducationEntry{CCNA Security}{2017-2018}{Online}{Curso de seguridad de redes de computadores, 70 horas, Habilidad para montar y securizar redes de computadores de medio-alto calibre.\\}
+\sepspace
 
-\EducationEntry{CCNP Switch}{2018-2019}{Online}{Curso de switches en redes de computadores, 70 horas, Habilidad para montar redes de computadores de alto calibre en sus distintas capas.\\}
+\EducationEntry{CCNA Security}{2017-2018}{Online}{Curso de seguridad de redes de computadores, 70 horas, Habilidad para montar y securizar redes de computadores de medio-alto calibre.}
+
+\sepspace
+
+\EducationEntry{CCNP Switch}{2018-2019}{Online}{Curso de switches en redes de computadores, 70 horas, Habilidad para montar redes de computadores de alto calibre en sus distintas capas.}
+
+\sepspace
 
 \EducationEntry{CCNP Route}{2018-2019}{Online}{Curso de routers en redes de computadores, 70 horas, Habilidad para montar redes de computadores de alto calibre.}
 
@@ -143,17 +161,24 @@ Mención en Ingeniería de Computadores.
 \SkillsEntry{}{UML}
 \SkillsEntry{}{Ensamblador}
 \SkillsEntry{}{SOAP}
-\SkillsEntry{}{REST\\}
+\SkillsEntry{}{REST}
+
+\sepspace
 
 \SkillsEntry{Porcesador de textos}{\LaTeX}
 \SkillsEntry{}{Microsofr Office}
-\SkillsEntry{}{Open Office\\}
+\SkillsEntry{}{Open Office}
+
+\sepspace
+
 \SkillsEntry{Sistemas operativos}{Linux}
 \SkillsEntry{}{Windows 7}
 \SkillsEntry{}{Windows 8}
 \SkillsEntry{}{Windows 10}
 \SkillsEntry{}{Guadalinex}
-\SkillsEntry{}{Unix\\}
+\SkillsEntry{}{Unix}
+
+\sepspace
 
 \SkillsEntry{Internet}{Chrome}
 \SkillsEntry{}{Mozilla}
@@ -161,11 +186,15 @@ Mención en Ingeniería de Computadores.
 \SkillsEntry{}{FTP}
 \SkillsEntry{}{SSH}
 \SkillsEntry{}{Git}
-\SkillsEntry{}{Servidor Apache\\}
+\SkillsEntry{}{Servidor Apache}
+
+\sepspace
 
 \SkillsEntry{Bases\\de datos}{MySQL}
 \SkillsEntry{}{SQL}
-\SkillsEntry{}{ORACLE\\}
+\SkillsEntry{}{ORACLE}
+
+\sepspace
 
 \SkillsEntry{Otros}{Configuración de equipos}
 \SkillsEntry{}{Configuración de redes}
@@ -176,9 +205,13 @@ Mención en Ingeniería de Computadores.
 
 \newpage
 \NewPart{Proyectos personales}
-\EducationEntry{Auditoría de Stimey}{2017-2018}{Escuela Superior de Ingeniería, Universidad de Cádiz}{Auditoría de la empresa Stimey creando un software servidor para controlar y monitorizar a los empleados y las ganancias e inventario de la empresa.\\}
+\EducationEntry{Auditoría de Stimey}{2017-2018}{Escuela Superior de Ingeniería, Universidad de Cádiz}{Auditoría de la empresa Stimey creando un software servidor para controlar y monitorizar a los empleados y las ganancias e inventario de la empresa.}
 
-\EducationEntry{Altavoz bluetooth personalizado}{2017-2018}{Escuela Superior de Ingeniería, Universidad de Cádiz}{Creación y programación, bajo supervisión, de un altavoz bluetooth funcional que utiliza un terminal serie y un procesador ARM para la reproducción de audio.\\}
+\sepspace
+
+\EducationEntry{Altavoz bluetooth personalizado}{2017-2018}{Escuela Superior de Ingeniería, Universidad de Cádiz}{Creación y programación, bajo supervisión, de un altavoz bluetooth funcional que utiliza un terminal serie y un procesador ARM para la reproducción de audio.}
+
+\sepspace
 
 \EducationEntry{Autómata solucionador de laberintos}{2017-2018}{Escuela Superior de Ingeniería, Universidad de Cádiz}{Creación y programación en arduino, bajo supervisión, de un robot capaz de salir de cualquier laberinto usando sensores de distancia, infrarrojos y CNY.}
 
@@ -187,13 +220,15 @@ Mención en Ingeniería de Computadores.
 
 \NewPart{Habilidades personales}{}
 \SkillsEntry{Idiomas}{Español (nativo)}
-\SkillsEntry{}{Inglés (B1)\\}
+\SkillsEntry{}{Inglés (B1)}
+
+\sepspace
 
 \SkillsEntry{Otras}{Trabajo en equipos multiculturales}
 \SkillsEntry{}{Flexibilidad y adaptación ante cambios en el proyecto}
 \SkillsEntry{}{Gran capacidad de comunicación}
 \SkillsEntry{}{Análisis y resolución de problemas}
-\SkillsEntry{}{Carnet de conducir tipo B y vehiculo propio}
+\SkillsEntry{}{Carnet de conducir tipo B y vehículo propio}
 %\SkillsEntry{}{}
 
 
