--- a/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Temario/Tema 3/Presentación/Sincronización P2P mediante eventos y mediante barreras.tex
+++ b/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Temario/Tema 3/Presentación/Sincronización P2P mediante eventos y mediante barreras.tex
@@ -214,6 +214,50 @@ Ejemplo de código Java para la gestión de una barrera y varios procesos:
 \end{columns}
 \end{frame}
 
+\section{Bibliografía}
+
+\begin{frame}{Bibliografía}
+
+\begin{thebibliography}{10}
+	
+%	\beamertemplatebookbibitems
+%	% Start with overview books.
+%	
+%	\bibitem{Author1990}
+%	A.~Author.
+%	\newblock {\em Handbook of Everything}.
+%	\newblock Some Press, 1990.
+	
+	
+	\beamertemplatearticlebibitems
+	% Followed by interesting articles. Keep the list short. 
+	
+	%http://sedici.unlp.edu.ar/handle/10915/23619
+	%http://sedici.unlp.edu.ar/bitstream/handle/10915/23619/4787-paper_cacic_2012_a_presentar.pdf?sequence=1
+	
+	%http://webdiis.unizar.es/~ezpeleta/lib/exe/fetch.php?media=misdatos:pc:08.pdf
+	%http://ocw.uc3m.es/ingenieria-informatica/arquitectura-de-computadores/materiales/es-m5-03-sincr-ocw.pdf
+	
+	\bibitem{Eventos1}
+	Sincronización de eventos discretos
+	\newblock {\em \url{http://sedici.unlp.edu.ar/handle/10915/23619}}
+	
+	\bibitem{Eventos2}
+	Sincronización de eventos discretos en sistemas distribuidos
+	\newblock {\em \url{http://sedici.unlp.edu.ar/bitstream/handle/10915/23619/4787-paper_cacic_2012_a_presentar.pdf?sequence=1}}
+	
+	\bibitem{Barrera1}
+	Sincronización por barrera
+	\newblock {\em \url{http://webdiis.unizar.es/~ezpeleta/lib/exe/fetch.php?media=misdatos:pc:08.pdf}}
+	
+	\bibitem{Barrera2}
+	Sincronización por barrera, Grupo ARCOS
+	\newblock {\em \url{http://ocw.uc3m.es/ingenieria-informatica/arquitectura-de-computadores/materiales/es-m5-03-sincr-ocw.pdf}}
+	
+	
+\end{thebibliography}
+\end{frame}
+
 \end{document}
 
 
