--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Fantasy.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Fantasy.tex
@@ -83,9 +83,9 @@
 	\begin{titlepage}
 		\centering
 		
-		{\scshape\huge Higher School of Engeneering \par}
+		{\scshape\huge University of Cádiz \par}
 		\vspace{1cm}
-		{\scshape\LARGE University of Cádiz\par}
+		{\scshape\LARGE Faculty of Engeneering\par}
 		\vspace{1cm}
 		{\scshape\Large{Stimey}\par}
 		\vspace{1cm}
