--- a/4 GII/2do Semestre/PINF/Fantasy/Documento de plan de proyecto/Documento de plan de proyecto.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documento de plan de proyecto/Documento de plan de proyecto.tex
@@ -145,6 +145,22 @@ Cuando está implementada una funcionalidad y testeada tanto por el grupo de pro
 	\item Implementación de la base de datos.
 \end{enumerate}
 
+\subsection{Sprint 2 (27 de marzo al 3 de abril)}
+\begin{enumerate}
+	\item Implementación de front-end.
+	\item Migraciones de la base de datos.
+	\item Adaptación del proyecto al framework Laravel.
+	\item Creación de fantasías.
+\end{enumerate}
+
+\subsection{Sprint 3 (3 de abril al 10 de abril)}
+\begin{enumerate}
+	\item Finalización de front-end.
+	\item Migraciones finales de la base de datos.
+	\item Creación de puntos activos.
+\end{enumerate}
+
+
 \section{Reuniones}
 \subsection{Reunión 0 (27 de febrero)}
 \begin{enumerate}
@@ -163,6 +179,18 @@ Cuando está implementada una funcionalidad y testeada tanto por el grupo de pro
 	\item Finalización del sprint 0.
 	\item Distribución de la información a buscar.
 	\item Comienzo del sprint 1.
+\end{enumerate}
+
+\subsection{Reunión 3 (27 de marzo)}
+\begin{enumerate}
+	\item Finalización del sprint 1.
+	\item Comienzo del sprint 2.
+\end{enumerate}
+
+\subsection{Reunión 4 (3 de abril)}
+\begin{enumerate}
+	\item Finalización del sprint 2.
+	\item Comienzo del sprint 3.
 \end{enumerate}
 
 \end{document}
