--- a/4 GII/2do Semestre/Administración de Servidores/Prácticas/Práctica 3/Documento/RodríguezHeras_Jesús y OtalAlberro_Aratnzazu.tex
+++ b/4 GII/2do Semestre/Administración de Servidores/Prácticas/Práctica 3/Documento/RodríguezHeras_Jesús y OtalAlberro_Aratnzazu.tex
@@ -118,14 +118,40 @@ En este ejercicio se deberá:
 	\lstinputlisting[language=Ruby]{../Vagrantfile1}
 	
 	\item \textbf{Configurar el cortafuegos para que de acceso al exterior.} \\
-	Para configurar el cortafuegos, primero debemos deshabilitar la interfaz de red que nos permite salir a Internet desde cada una de las máquinas de las redes. Para ello, identificamos la interfaz que queremos deshabilitar y usamos el comando \texttt{sudo ifconfig eth0 down}.
+	Para configurar el cortafuegos, primero debemos deshabilitar la interfaz de red que nos permite salir a Internet desde cada una de las máquinas de las redes. Para ello, identificamos la interfaz que queremos deshabilitar (en nuestro caso, \texttt{eth0}).
+	
+	Si deshabilitamos esta interfaz directamente, tendremos el problema de que la terminal se quedará colgada porque estamos conectados por SSH a esa interfaz, entonces debemos habilitar la conexión SSH desde la otra interfaz. Para ello nos dirigimos al fichero \texttt{sshd\_config} (\texttt{sudo nano /etc/ssh/sshd\_config}) y descomentamos la línea que dice \\\texttt{PasswordAuthentication yes}. Luego, reiniciamos el servicio SSH (sudo /etc/init.d/ssh restart) y ya podemos conectarnos desde la máquina que actúa como router/cortafuegos.
+	
+	Es hora de entrar en la máquina cortafuegos y conectarnos por SSH a cada una de las máquinas. Una vez dentro de las máquinas servidoras usamos el comando \texttt{sudo ifconfig eth0 down} para deshabilitar la interfaz de red externa.
 	
 	También debemos activar el ip forward en el router para tener conectividad entre las máquinas de las diferentes redes. Para ello usamos el comando\\\texttt{sudo echo 1 > /proc/sys/net/ipv4/ip\_forward}.
 	
-	A continuación, establecemos la puerta de enlace como la interfaz que tenemos en la máquina que hace de router. Para ello usamos el comando \texttt{sudo add default gw 192.168.x.1}, siendo \texttt{x} la red a la que pertenece cada máquina.
+	A continuación, establecemos la puerta de enlace como la interfaz que tenemos en la máquina que hace de router. Para ello usamos el comando \texttt{sudo route add default gw 192.168.x.1 eth1}, siendo \texttt{x} la red a la que pertenece cada máquina, y \texttt{eth1} la interfaz de la red interna.
 	
-	Lo siguiente es habilitar el enrutamiento a partir de la máquina router al resto de máquinas con el comando\\\texttt{sudo iptables -t nat -A POSTROUTING -o eth0 -j MASQUERADE}.
+	\begin{figure}[h]
+		\centering
+		\includegraphics[scale=0.25]{Ping.png}
+		\caption{En esta imagen se ve como la vm4 (red 2) hace ping a la vm2 (red 1) y la vm1 (red1) hace ping a la vm3 (red 2).}
+	\end{figure}
 	
+	Lo siguiente es habilitar el enrutamiento a partir de la máquina router al resto de máquinas. El estado inicial es el siguiente:
+	\begin{figure}[h]
+		\centering
+		\includegraphics[scale=0.25]{Ping2.png}
+		\caption{En esta imagen se ve como todas las máquinas intentan hacer ping a \texttt{google.es} pero la única que lo consigue es la máquina r (router/cortafuegos).}
+	\end{figure}
+
+	 Para habilitar el enrutamiento usamos el comando \texttt{sudo iptables -t nat -A \\POSTROUTING -o eth0 -j MASQUERADE} en la máquina router/cortafuegos.
+	 
+	 Una vez hecho eso, el resultado es el siguiente:
+	 
+	 \begin{figure}[h]
+	 	\centering
+	 	\includegraphics[scale=0.25]{Ping3.png}
+	 	\caption{Una vez habilitado el enrutamiento, todas las máquinas tienen acceso a Internet.}
+	 \end{figure}
+	
+	\newpage
 	\item \textbf{Configurar manualmente los clientes de las redes para que se puedan conectar al servidor.} \\
 	Solo con poner la puerta de enlace y el ip forwarding estaría hecho y ya se ha hecho en el apartado anterior.
 \end{itemize}
