--- a/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Temario/Tema 3/Presentación/Sincronización P2P mediante eventos y mediante barreras.tex
+++ b/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Temario/Tema 3/Presentación/Sincronización P2P mediante eventos y mediante barreras.tex
@@ -69,7 +69,7 @@
 % - Use the \inst command only if there are several affiliations.
 % - Keep it simple, no one is interested in your street address.
 
-\date{2 de abril de 2019}
+%\date{2 de abril de 2019}
 % - Either use conference name or its abbreviation.
 % - Not really informative to the audience, more for people (including
 %   yourself) who are reading the slides online
